fix bottom-bar overlap

--- a/src/renderer/_vue/assets/css/app.scss
+++ b/src/renderer/_vue/assets/css/app.scss
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6{
   display: none;
 
   > iframe {
-    height: 100%;
+    height: calc(100% - var(--lens-bottom-bar-height));
     border: none;
   }
 }
